[gd_scene load_steps=11 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://fonts/Fjalla_One/FjallaOne-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/Intro.gd" type="Script" id=14]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.956863, 0.956863, 0.956863, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 0.45098, 0.0823529, 1 )

[sub_resource type="DynamicFont" id=3]
size = 64
outline_size = 4
outline_color = Color( 0.137255, 0.12549, 0.12549, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 80
outline_size = 1
use_mipmaps = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 36
font_data = ExtResource( 2 )

[node name="Intro" type="CanvasLayer"]
script = ExtResource( 14 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Panel"]
anchor_bottom = 1.0
margin_right = 96.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="Panel"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -540.0
margin_bottom = 540.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Preview" type="TextureRect" parent="Panel"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 48.0
margin_top = -412.0
margin_right = 1328.0
margin_bottom = 308.0
rect_min_size = Vector2( 1280, 720 )
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Players" type="HBoxContainer" parent="Panel/Preview"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -480.0
margin_top = -128.0
margin_right = -32.0
margin_bottom = -32.0
rect_clip_content = true
alignment = 2
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="VS" type="Label" parent="Panel/Preview/Players"]
visible = false
margin_left = 388.0
margin_top = 7.0
margin_right = 448.0
margin_bottom = 88.0
custom_fonts/font = SubResource( 3 )
text = "VS"
align = 1
valign = 1

[node name="DisplayName" type="Label" parent="."]
margin_left = 48.0
margin_top = 16.0
margin_right = 1328.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.227451, 0.207843, 0.207843, 1 )
text = "Título"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="."]
margin_left = 128.0
margin_top = 848.0
margin_right = 1248.0
margin_bottom = 1080.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.227451, 0.207843, 0.207843, 1 )
text = "Descripción"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controls" type="VBoxContainer" parent="."]
margin_left = 1392.0
margin_top = 64.0
margin_right = 1856.0
margin_bottom = 1017.0
rect_clip_content = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Controls"]
margin_right = 464.0
margin_bottom = 61.0
custom_fonts/font = SubResource( 6 )
text = "Controles"
align = 1

[node name="Group1" type="Label" parent="Controls"]
visible = false
margin_top = 65.0
margin_right = 464.0
margin_bottom = 111.0
custom_fonts/font = SubResource( 7 )
text = "Grupo 1"
align = 1
clip_text = true

[node name="Group2" type="Label" parent="Controls"]
visible = false
margin_top = 115.0
margin_right = 464.0
margin_bottom = 161.0
custom_fonts/font = SubResource( 7 )
text = "Grupo 2"
align = 1
clip_text = true

[node name="Timer" type="Timer" parent="."]
one_shot = true
